<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".Activities.LoginActivity">
    <data>
        <variable name="loginVM" type="com.example.vaccinationschedule.viewModel.LoginViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView android:id="@+id/loginTextView"
                  style="@style/loginRegisterHeaderStyle"
                  android:text="@string/loginTextView"
                  app:layout_constraintTop_toTopOf="@+id/loginGuideLine"
                  app:layout_constraintStart_toStartOf="@+id/loginLeftMarginGuideline"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signInUserEmailEditeText"
                style="@style/textInputLayoutStyle"
                android:hint="@string/emailText"
                app:layout_constraintStart_toStartOf="@id/loginLeftMarginGuideline"
                app:layout_constraintEnd_toStartOf="@id/loginRightMarginGuideline"
                app:layout_constraintTop_toBottomOf="@id/loginTextView"
                android:layout_marginTop="8dp">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpUserNameExtendedEditeText"
                    style="@style/extendedEditeTextStyle"
                    android:drawableStart="@drawable/ic_email_register"
                    android:text="@={loginVM.loginEmail}"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signInPasswordEditeText"
                style="@style/textInputLayoutStyle"
                android:hint="@string/passwordText"
                app:layout_constraintStart_toStartOf="@id/loginLeftMarginGuideline"
                app:layout_constraintEnd_toStartOf="@id/loginRightMarginGuideline"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/signInUserEmailEditeText">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupPasswordExtendedEditeText"
                    style="@style/extendedEditeTextStyle"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_password_register"
                    android:text="@={loginVM.loginPassword}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/loginSignInButton"
                style="@style/registerationButtonStyle"
                android:text="@string/signInText"
                app:layout_constraintTop_toBottomOf="@id/signInPasswordEditeText"
                app:layout_constraintLeft_toLeftOf="parent"
                android:onClick="@{()->loginVM.onSignInClick()}"
                app:layout_constraintStart_toStartOf="@+id/loginLeftMarginGuideline"
                app:layout_constraintEnd_toStartOf="@+id/loginRightMarginGuideline"/>

        <TextView android:id="@+id/loginRegisterTextView"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@id/loginSignInButton"
                  app:layout_constraintStart_toStartOf="@id/loginMidleGuideLine"
                  android:text="@string/signInRegisterText"
                  android:textColor="@color/colorAppTheme"
                  style="@style/registerationTextView"
                  android:onClick="@{()->loginVM.onCreateAccountClick()}"
                  android:layout_marginStart="5dp"/>

        <TextView android:id="@+id/loginNoAccountTextView"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@id/loginSignInButton"
                  app:layout_constraintEnd_toEndOf="@id/loginMidleGuideLine"
                  android:text="@string/signInNoAccountText"
                  style="@style/registerationTextView"
                  />


        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/loginGuideLine"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.08"
        />


        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/loginMidleGuideLine"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
        />


        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/loginLeftSeperatorGuideLine"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.45"
        />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/loginRightSeperatorGuideLine"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.55"
        />


        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/loginLeftMarginGuideline"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.08"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/loginRightMarginGuideline"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.92"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
