<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="registerVm" type="com.example.vaccinationschedule.viewModel.RegisterViewModel"/>
    </data>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signUpNameEditeText"
                    style="@style/textInputLayoutStyle"
                    app:layout_constraintRight_toRightOf="@id/registerRightMarginGuideline"
                    app:layout_constraintLeft_toLeftOf="@id/registerLeftMarginGuideline"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/signupTextView">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signUpNameExtendedEditeText"
                        style="@style/extendedEditeTextStyle"
                        android:text="@={registerVm.name}"
                        android:drawableStart="@drawable/ic_name_register"
                        android:hint="@string/nameTexr"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signInPasswordEditeText"
                    style="@style/textInputLayoutStyle"
                    app:layout_constraintRight_toRightOf="@id/registerRightMarginGuideline"
                    app:layout_constraintLeft_toLeftOf="@id/registerLeftMarginGuideline"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/signInUserEmailEditeText">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signupPasswordExtendedEditeText"
                        style="@style/extendedEditeTextStyle"
                        android:inputType="textPassword"
                        android:hint="@string/passwordText"
                        android:text="@={registerVm.password}"
                        android:drawableStart="@drawable/ic_password_register">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/surNameEditeText"
                    style="@style/textInputLayoutStyle"
                    app:layout_constraintRight_toRightOf="@id/registerRightMarginGuideline"
                    app:layout_constraintLeft_toLeftOf="@id/registerLeftMarginGuideline"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/signInPasswordEditeText">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/surNameExtendedEditeText"
                        style="@style/extendedEditeTextStyle"
                        android:hint="Surname"
                        android:text="@={registerVm.surname}"
                        android:drawableStart="@drawable/ic_password_register">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/idNumberEditeText"
                    style="@style/textInputLayoutStyle"
                    app:layout_constraintRight_toRightOf="@id/registerRightMarginGuideline"
                    app:layout_constraintLeft_toLeftOf="@id/registerLeftMarginGuideline"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/surNameEditeText">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/idNumberExtendedEditeText"
                        style="@style/extendedEditeTextStyle"
                        android:text="@={registerVm.idNumber}"
                        android:hint="ID number"
                        android:maxLength="16"
                        android:inputType="number"
                        android:drawableStart="@drawable/ic_password_register">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/streetEditeText"
                    style="@style/textInputLayoutStyle"
                    app:layout_constraintRight_toRightOf="@id/registerRightMarginGuideline"
                    app:layout_constraintLeft_toLeftOf="@id/registerLeftMarginGuideline"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/idNumberEditeText">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/streetExtendedEditeText"
                        style="@style/extendedEditeTextStyle"
                        android:hint="Street"
                        android:text="@={registerVm.street}"
                        android:drawableStart="@drawable/ic_street_1">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cityEditeText"
                    style="@style/textInputLayoutStyle"
                    app:layout_constraintRight_toRightOf="@id/registerRightMarginGuideline"
                    app:layout_constraintLeft_toLeftOf="@id/registerLeftMarginGuideline"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/streetEditeText">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cityExtendedEditeText"
                        style="@style/extendedEditeTextStyle"
                        android:hint="City"
                        android:text="@={registerVm.city}"
                        android:drawableStart="@drawable/ic_location_on_black_24dp">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneEditeText"
                    style="@style/textInputLayoutStyle"
                    app:layout_constraintRight_toRightOf="@id/registerRightMarginGuideline"
                    app:layout_constraintLeft_toLeftOf="@id/registerLeftMarginGuideline"
                    android:layout_marginTop="8dp"

                    app:layout_constraintTop_toBottomOf="@+id/cityEditeText">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneExtendedEditeText"
                        style="@style/extendedEditeTextStyle"
                        android:hint="Phone"
                        android:inputType="number"
                        android:maxLength="11"
                        android:text="@={registerVm.mobilePhone}"
                        android:drawableStart="@drawable/ic_phone">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signInUserEmailEditeText"
                    style="@style/textInputLayoutStyle"
                    app:layout_constraintRight_toRightOf="@id/registerRightMarginGuideline"
                    app:layout_constraintLeft_toLeftOf="@id/registerLeftMarginGuideline"
                    app:layout_constraintTop_toBottomOf="@id/signUpNameEditeText"
                    android:layout_marginTop="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signUpUserNameExtendedEditeText"
                        style="@style/extendedEditeTextStyle"
                        android:hint="@string/emailText"
                        android:text="@={registerVm.emailAddress}"
                        android:drawableStart="@drawable/ic_email_register"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView android:id="@+id/signupTextView"
                      style="@style/loginRegisterHeaderStyle"
                      app:layout_constraintTop_toBottomOf="@id/guideLine"
                      app:layout_constraintLeft_toLeftOf="parent"
                      android:text="@string/signupTextView"
                      app:layout_constraintStart_toStartOf="@+id/registerLeftMarginGuideline"/>

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideLine"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.08"/>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerSignUpButton"
                    style="@style/registerationButtonStyle"
                    app:layout_constraintTop_toBottomOf="@id/registerHaveAccountTextView"
                    android:text="@string/signUpText"
                    app:layout_constraintStart_toStartOf="@+id/registerLeftMarginGuideline"
                    android:layout_marginStart="8dp"
                    android:onClick="@{()->registerVm.onSignUpClick()}"
                    app:layout_constraintEnd_toStartOf="@+id/registerRightMarginGuideline"
                    android:layout_marginEnd="8dp"/>

            <TextView
                    android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@id/phoneEditeText"
                      android:text="@string/signUpHaveAccountText"
                      style="@style/registerationTextView"
                      app:layout_constraintStart_toStartOf="@+id/registerLeftMarginGuideline"
                      android:layout_marginStart="70dp"
                      android:id="@+id/registerHaveAccountTextView"/>


            <TextView android:layout_width="wrap_content"
                      android:layout_height="17dp"
                      app:layout_constraintTop_toBottomOf="@id/phoneEditeText"
                      android:text="@string/signUpRegisterText"
                      android:onClick="@{() ->  registerVm.onSignInClick()}"
                      style="@style/registerationTextView"
                      android:textColor="@color/colorAppTheme"
                      android:layout_marginStart="8dp"
                      app:layout_constraintStart_toEndOf="@+id/registerHaveAccountTextView"/>

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/registerLeftMarginGuideline"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.08"/>

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/registerRightMarginGuideline"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.92"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
